# srl-netbox-demo

./: .devcontainer.json  .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  srl_netbox.clab.yaml  srl_netbox.clab.yaml.annotations.json  srl_netbox.drawio  srl_netbox.yaml  srl_netbox_dark.drawio  srl_netbox_light.drawio
.devcontainer/: devcontainer.json
ansible_intents/: fabric.yml  group_infra.yml
api_scripts/: import_infra.sh  import_service.sh  nb_script_function.sh
config/: 01-install-plugins.sh  configuration.py  init-db.sh  local_settings.py  netbox-init.sh
intents/ansible_intents/: fabric.yml  group_infra.yml
intents/netbox_intents/: lab01.yaml  lags-lab01.yaml
inv/: netbox.yml
netbox_intents/: dci_dc1.yaml  l2vpns-dci.yaml  l2vpns-lab01.yaml  l3vpns-lab01.yaml  lags-dci_d1.yaml
