[project]
name = "srl-netbox-demo"
version = "0.1.0"
description = "Demo lab for Nokia SR Linux, NetBox, and Ansible automation."
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "ansible==8.7.0",
    "ansible-core==2.15.13",
    "attrs==25.4.0",
    "cffi==2.0.0",
    "cryptography==43.0.3",
    "importlib-resources==5.0.7",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "lxml==6.0.2",
    "markupsafe==3.0.3",
    "ncclient==0.7.0",
    "netaddr==1.3.0",
    "networkx==3.2.1",
    "packaging==25.0",
    "pycparser==2.23",
    "pyyaml==6.0.3",
    "referencing==0.36.2",
    "resolvelib==1.0.1",
    "rpds-py==0.27.1",
    "xmltodict==1.0.2",
    "pynetbox==7.5.0",
    "pytz==2025.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
include-package-data = false
